Update MinMaxBoundWrapper