@@ -5,15 +5,16 @@ import net.minecraft.advancements.critereon.MinMaxBounds;
 
 import javax.annotation.Nullable;
 import java.util.List;
+import java.util.Optional;
 
 public class MinMaxBoundsWrapper {
-    @Nullable
-    private static Number saveNumber(@Nullable Object o) {
+
+    private static Optional<Number> saveNumber(@Nullable Object o) {
         if (o instanceof Number n) {
-            return n;
+            return Optional.of(n);
         }
 
-        return null;
+        return Optional.empty();
     }
 
     public static MinMaxBounds.Doubles ofMinMaxDoubles(Object o) {
@@ -23,15 +24,13 @@ public class MinMaxBoundsWrapper {
 
         if (o instanceof List<?> list) {
             if (list.size() == 1) {
-                return ofMinMaxDoubles(list.get(0));
+                return ofMinMaxDoubles(list.getFirst());
             }
 
             if (list.size() == 2) {
-                var min = saveNumber(list.get(0));
-                var max = saveNumber(list.get(1));
-                if (min != null && max != null) {
-                    return MinMaxBounds.Doubles.between(min.doubleValue(), max.doubleValue());
-                }
+                var min = saveNumber(list.get(0)).map(Number::doubleValue);
+                var max = saveNumber(list.get(1)).map(Number::doubleValue);
+                return new MinMaxBounds.Doubles(min, max, min.map(d -> d * d), max.map(d -> d * d));
             }
         }
 
@@ -45,41 +44,14 @@ public class MinMaxBoundsWrapper {
             return new MinMaxBounds.Doubles(min, max, min.map(d -> d * d), max.map(d -> d * d));
         }
 
-
         LootJS.LOG.warn("Failed creating bounds, got: " + o);
         return MinMaxBounds.Doubles.exactly(Double.MAX_VALUE);
     }
 
-    public static MinMaxBounds.Ints ofMinMaxInt(@Nullable Object o) {
-        if (o instanceof String s && s.equalsIgnoreCase("any")) {
-            return MinMaxBounds.Ints.ANY;
-        }
-
-        if (o instanceof List<?> list) {
-            if (list.size() == 1) {
-                return ofMinMaxInt(list.get(0));
-            }
-
-            if (list.size() == 2) {
-                var min = saveNumber(list.get(0));
-                var max = saveNumber(list.get(1));
-                if (min != null && max != null) {
-                    return MinMaxBounds.Ints.between(min.intValue(), max.intValue());
-                }
-            }
-        }
-
-        if (o instanceof Number n) {
-            return MinMaxBounds.Ints.exactly(n.intValue());
-        }
-
-        if (o instanceof MinMaxBounds<? extends Number> minMaxBounds) {
-            var min = minMaxBounds.min().map(Number::intValue);
-            var max = minMaxBounds.max().map(Number::intValue);
-            return new MinMaxBounds.Ints(min, max, min.map(i -> ((long) i * i)), max.map(i -> ((long) i * i)));
-        }
-
-        LootJS.LOG.warn("Failed creating bounds, got: " + o);
-        return MinMaxBounds.Ints.exactly(Integer.MAX_VALUE);
+    public static MinMaxBounds.Ints ofMinMaxInt(Object o) {
+        MinMaxBounds.Doubles doubles = ofMinMaxDoubles(o);
+        var min = doubles.min().map(Double::intValue);
+        var max = doubles.max().map(Double::intValue);
+        return new MinMaxBounds.Ints(min, max, min.map(i -> ((long) i * i)), max.map(i -> ((long) i * i)));
     }
 }
